--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,5 @@ color: #2e2f42;}
     .footer{line-height: 1.5;
            letter-spacing: 0.02em;
         color:#f4f4fd; }
+        .office-style{border-bottom: 1px solid #e7e9fc;}
+        .div-container{display: flex;}
