--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,4 @@ color: #2e2f42;}
         color:#f4f4fd; }
         .office-style{border-bottom: 1px solid #e7e9fc;}
         .div-container{display: flex;}
+        .office{width: 1158px;}
