--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,11 @@
             line-height: 1.17;
             letter-spacing: 0.03em;
             color:#4d5ae5 ;
-            text-transform: uppercase;}
+            text-transform: uppercase;
+            }
 .logotext { font-family:"Roboto", sans-serif ;
-    color: #434455
+    color: #434455;
+    margin-right: 76px;
 }
 .ul_style {font-weight: 500;
      line-height: 1.5;
@@ -26,7 +28,8 @@
 
 .link_color {color:#434455;
 text-decoration: none;
-padding: 24px 0 24px;
+padding-top: 24px;
+padding-bottom: 24px;
 display: flex;
 gap: 40px;}
 .link_colortwo{color: #2e2f42;}
@@ -95,10 +98,4 @@ color: #2e2f42;}
     .footer{line-height: 1.5;
            letter-spacing: 0.02em;
         color:#f4f4fd; }
-        .nav-style{display: flex; container: normal; width: 1158px; margin: 0 auto;
-            padding-left:15px; padding-right: 15px;
-            }
-        .office-style{display: flex;
-            }
-        .div-container{display: flex;align-items: center; }
-        
+        .header-style{border-bottom: 1px solid; color: #e7e9fc;}
