--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,4 @@ color: #2e2f42;}
            letter-spacing: 0.02em;
         color:#f4f4fd; }
         .header-style{border-bottom: 1px solid; color: #e7e9fc;}
+        .div-style{display: flex;}
