--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,8 @@ color: #2e2f42;}
     .footer{line-height: 1.5;
            letter-spacing: 0.02em;
         color:#f4f4fd; }
-        .header-style{border-bottom: 1px solid; color: #e7e9fc;}
-        .div-style{display: flex;
-        width: 1158px;
-    padding-left: 15px;
-padding-right: 15px;}
+        .header-style{border-bottom: 1px solid; color: #e7e9fc; width: 1158px;
+            padding-left: 15px;
+        padding-right: 15px;}
+        .div-style{display: flex; align-items: center;
+        }
