--- a/css/style.css
+++ b/css/style.css
@@ -79,13 +79,16 @@ color: #2e2f42;}
 .firs-area{ 
         background-color: #2e2f42 ;
     padding: 188px 0;}
-        .head-style{
+        .head-style{ max-width: 496px;
                 font-size: 56px;
                 line-height: 1.07;
                 text-align: center;
                 letter-spacing: 0.02em;
                 color:#ffffff ;
-            max-width: 496px;}
+                
+                
+           
+        }
                 .button {background-color:#4D5AE5;
                         font-family: "Roboto", sans-serif ;
                         font-weight: 500;
@@ -98,7 +101,9 @@ color: #2e2f42;}
                 min-width: 169px;
             height: 56px;
         border: none;
-    border-radius: 4px;}
+    border-radius: 4px;
+    
+}
                 .hvr:hover {background-color: #404BBF
                 }        
                 .hvr:focus{background-color: #404BBF}
@@ -106,5 +111,5 @@ color: #2e2f42;}
     .footer{line-height: 1.5;
            letter-spacing: 0.02em;
         color:#f4f4fd; }
-        
+.section-two {padding-top: 120px; padding-bottom: 120px;}  
         
