--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,9 @@ letter-spacing: 0.02em;
         font-size: 20px;
         line-height: 1.2;
     letter-spacing: 0.02em;
-color: #2e2f42;}
+color: #2e2f42;
+
+}
 
     
     
@@ -67,6 +69,7 @@ color: #2e2f42;}
 gap: 24px
 ;
 margin-right: 24px;}
+.li-style{width: calc(100%-72px);}
 
 .sectionthree{background-color:#F4F4FD ;}
 
@@ -89,6 +92,9 @@ margin-right: 24px;}
                 text-align: center;
                 letter-spacing: 0.02em;
                 color:#ffffff ;
+                display: flex;
+                
+                
                 
                 
            
@@ -107,6 +113,7 @@ margin-right: 24px;}
         border: none;
     border-radius: 4px;
     
+    
 }
                 .hvr:hover {background-color: #404BBF
                 }        
@@ -117,5 +124,6 @@ margin-right: 24px;}
         color:#f4f4fd; }
 .section-two {padding-top: 120px; padding-bottom: 120px;}  
 .hidden-head{ visibility: hidden ;}
+.head {margin-bottom: 8px;}
 
         
