--- a/css/style.css
+++ b/css/style.css
@@ -1,141 +1,310 @@
-.body_style {font-family: "Roboto", sans-serif;
-    color: #434455
-        
-            
-    
-;}
-.logo_link {text-decoration: none;
-            font-family:'Raleway', sans-serif ;
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 1.17;
-            letter-spacing: 0.03em;
-            color:#4d5ae5 ;
-            text-transform: uppercase;
-            }
-.logotext { font-family:"Roboto", sans-serif ;
-    color: #434455;
-    margin-right: 76px;
-}
-.ul_style {font-weight: 500;
-     line-height: 1.5;
-            letter-spacing: 0.02em;
-            font-size: 16px;
-            list-style: none;
-            font-weight: 500;
-            display: flex;
-            gap: 40px;
-            padding-top: 24px;
-            padding-bottom: 24px;}
-
-.link_color {color:#434455;
-text-decoration: none;
-
-display: flex;
-gap: 40px;}
-.link_colortwo{color: #2e2f42;}
-a:hover   {color:#404bbf}
-a:active  {color:#404bbf}
-a:focus   {color: #404bbf;}
-
-.contact  { font-style: normal;
-        
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
+*, 
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-    .head{font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-    letter-spacing: 0.02em;
-color: #2e2f42;
+body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #FFFFFF;
+}
+
+img {
+  display: block;
+}
+
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header__container {
+  display: flex;
+}
+
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.header__nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  margin-right: 76px;
+}
+
+.nav-logo .logo-span {
+  color: #2e2f42;
+}
+
+.nav-list {
+  display: flex;
+  gap: 40px;
+}
+
+.nav-list__list-item .link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  padding: 24px 0;
+}
+
+.nav-list__list-item .link:hover,
+.nav-list__list-item .link:focus {
+  color: #404bbf;
+}
+
+.contact {
+  font-style: normal;
+  display: flex;
+  margin-left: auto;
+}
+
+.contact-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+.contact .link {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.contact .link:hover,
+.contact .link:focus {
+  color: #404bbf;
+}
+
+.first-section {
+  background-color: #2e2f42;
+  padding: 188px 0;
+}
+
+.first-section .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.first-section__title {
+  max-width: 496px;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+}
+
+.first-section__btn {
+  display: block;
+  min-width: 169px;
+  border: none;
+  border-radius: 4px;
+  height: 56px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  color: #ffffff;
+  background-color: #4D5AE5;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+}
+
+.first-section__btn:hover,
+.first-section__btn:focus {
+  background-color: #404BBF;
+}
+
+.second-section {
+  padding: 120px 0;
+}
+
+.second-section__list {
+  display: flex;
+  gap: 24px;
+}
+
+.second-section__list-item {
+  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 72px) / 4);
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.second-section__list-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
+  margin-bottom: 8px;
+}
+
+.second-section .text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.third-section {
+  background-color: #f4f4fd;
+  padding: 120px 0;
+}
+
+.third-section__title {
+  margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
+.third-section__list {
+  display: flex;
+  gap: 24px;
+}
+
+.third-section__list .list-item {
+  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 72px) / 4);
+  background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+  background-color: #ffffff;
+}
+
+.list-item__container {
+  padding: 32px 0;
+}
+
+.third-section__list .member-name {
+  text-align: center;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.third-section__list .text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.forth-section {
+  padding: 120px 0;
+}
+
+.forth-section__title {
+  margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2E2F42;
+}
+
+.forth-section__list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.forth-section__list .list-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.forth-section_list-item-container {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.forth-section .list-item__title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.list-item .text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.footer {
+  background-color: #2e2f42;
+  padding: 100px 0;
 
 }
 
-    
-    
-    
-    
-    
-    
-
-.texts {line-height: 1.5;
-    letter-spacing: 0.02em;
-text-align: center;}
-    
-    
-.ul_style2{list-style: none;}
-.section2{display: flex;
-gap: 24px
-;
-margin-right: 24px;}
-.li-style{width: calc(100%-72px);}
-
-.sectionthree{background-color:#F4F4FD ;
-padding-top: 120px;
-padding-bottom: 120px;}
-
-.sectionthreehead{font-size: 36px;
-        line-height: 1.11;
-        text-align: center;
-        letter-spacing: 0.02em;
-        text-transform: capitalize;
-        color: #2e2f42;
-    margin-bottom: 72px;}
-
-.ul_style3{list-style: none;
-    display: flex;
-    gap: 24px;
-    margin-right: 24px;
-    text-align: center;
-    margin-bottom: 8px;
-
+.footer .text {
+  color: #F4F4FD;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
 }
-.sectionthreelist{background-color: #ffffff;
-width: calc(100%-72px);
-border-radius: 0px 0px 4px 4px;}
-.firs-area{ 
-        background-color: #2e2f42 ;
-    padding: 188px 0;}
-        .head-style{ max-width: 496px;
-                font-size: 56px;
-                line-height: 1.07;
-                text-align: center;
-                letter-spacing: 0.02em;
-                color:#ffffff ;
-                display: flex;
-                
-                
-                
-                
-           
-        }
-                .button {background-color:#4D5AE5;
-                        font-family: "Roboto", sans-serif ;
-                        font-weight: 500;
-                        font-size: 16px;
-                        line-height: 1.5;
-                        letter-spacing: 0.04em;
-                        color:#ffffff ;
-                        cursor: pointer;
-                    display: block; 
-                min-width: 169px;
-            height: 56px;
-        border: none;
-    border-radius: 4px;
-    
-    
-}
-                .hvr:hover {background-color: #404BBF
-                }        
-                .hvr:focus{background-color: #404BBF}
-                .section2{list-style: none;}
-    .footer{line-height: 1.5;
-           letter-spacing: 0.02em;
-        color:#f4f4fd; }
-.section-two {padding-top: 120px; padding-bottom: 120px;}  
-.hidden-head{ visibility: hidden ;}
-.head {margin-bottom: 8px;}
 
-        
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
+.footer-logo .logo-span {
+  color: #f4f4fd;
+}
+
+.footer .text {
+  max-width: 264px;
+}
