--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*, 
+*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -16,8 +16,22 @@ img {
   display: block;
 }
 
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 .page-header {
+  height: 72px;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow:
+    0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
+  display: flex;
 }
 
 .header__container {
@@ -56,6 +70,23 @@ img {
   gap: 40px;
 }
 
+.nav-list__list-item:nth-of-type(1) .link {
+  position: relative;
+  color: #404bbf;
+}
+
+
+.nav-list__list-item:nth-of-type(1) .link::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  background-color: #404bbf;
+  border-radius: 2px;
+}
+
 .nav-list__list-item .link {
   font-weight: 500;
   font-size: 16px;
@@ -63,6 +94,7 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-list__list-item .link:hover,
@@ -88,7 +120,9 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .contact .link:hover,
 .contact .link:focus {
@@ -96,8 +130,18 @@ img {
 }
 
 .first-section {
-  background-color: #2e2f42;
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 188px 0;
+  background-color: #2e2f42;
+  background-image:
+    linear-gradient(rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)),
+    url(../images/herobg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
 }
 
 .first-section .container {
@@ -129,6 +173,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .first-section__btn:hover,
@@ -179,6 +224,17 @@ img {
   color: #434455;
 }
 
+.second-section__list-item .icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+  background-color: #F4F4FD;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  border: 1px solid #8e8f99;
+}
+
 .third-section {
   background-color: #f4f4fd;
   padding: 120px 0;
@@ -199,7 +255,7 @@ img {
   gap: 24px;
 }
 
-.third-section__list .list-item {
+.third-section__list>.list-item {
   width: calc((100% - 72px) / 4);
   flex-basis: calc((100% - 72px) / 4);
   background-color: #ffffff;
@@ -208,6 +264,41 @@ img {
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
 }
+
+.third-section .social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 16px;
+}
+
+.third-section .social-list .list-item {
+  width: 40px;
+  height: 40px;
+}
+
+
+
+.third-section .social-list .list-item .social-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon {
+  fill: #f4f4fd;
+}
+
+.third-section .social-list .list-item .social-link:hover,
+.third-section .social-list .list-item .social-link:focus {
+  background-color: #404bbf;
+}
+
 
 .list-item__container {
   padding: 32px 0;
@@ -253,6 +344,45 @@ img {
 
 .forth-section__list .list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.forth-section__list .list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.forth-section__list .list-item .img-container {
+  width: 360px;
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+}
+
+.forth-section__list .list-item .img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.forth-section__list .list-item .img-container .img-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  padding: 40px 32px;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.forth-section__list .list-item:hover .img-container .img-text {
+  transform: translateY(0);
 }
 
 .forth-section_list-item-container {
@@ -307,4 +437,47 @@ img {
 
 .footer .text {
   max-width: 264px;
+}
+
+.footer .container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer .subcontainer {
+  margin-right: 120px;
+}
+
+.footer .social-container .text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  margin-bottom: 16px;  
+}
+
+.footer .social-container .social-list{
+  display: flex;
+  gap: 16px;
+}
+
+.footer .social-container .social-list .list-item {
+  width: 40px;
+  height: 40px;
+}
+.footer .social-container .social-list .list-item .social-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4D5AE5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer .social-container .social-list .list-item .social-link:hover, 
+.footer .social-container .social-list .list-item .social-link:focus {
+  background-color: #31D0AA;
 }
